[package]
name = "solana-transaction-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
solana-client = "1.17"
solana-sdk = "1.17"
anyhow = "1.0"
base64 = "0.21"
bincode = "1.3"
dotenv = "0.15"
bs58 = "0.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
